--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mesto</title>
+    <link rel="icon" href="<%=require('./images/avatar.jpg')%>" type="image/jpg">
   </head>
   <body class="page">
     <div class="page__content">
@@ -55,7 +56,7 @@
               pattern="^[a-zA-Zа-яА-Я\- ]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
-            <span class="name-input-error"></span>
+            <span class="name-input-error input__error"></span>
             <input
               type="text"
               id="description-input"
@@ -68,7 +69,7 @@
               pattern="^[a-zA-Zа-яА-Я\- ]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
-            <span class="description-input-error"></span>
+            <span class="description-input-error input__error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -89,7 +90,7 @@
               required
               pattern="^(https?:\/\/)?([A-Za-z0-9.-]+\.[A-Za-z]{2,})$"
             />
-            <span class="avatar-input-error"></span>
+            <span class="avatar-input-error input__error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -113,7 +114,7 @@
               pattern="^[a-zA-Zа-яА-Я\- ]+$"
               data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
-            <span class="place-input-error"></span>
+            <span class="place-input-error input__error"></span>
             <input
               type="url"
               id="url-input"
@@ -123,7 +124,7 @@
               required
               pattern="^(https?:\/\/)?([A-Za-z0-9.-]+\.[A-Za-z]{2,})$"
             />
-            <span class="url-input-error"></span>
+            <span class="url-input-error input__error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
